--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "amazing-portfolio",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://{username}.github.io/{repo-name}/",
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
